@@ -46,20 +46,8 @@
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
       <version>2.18.1</version>
-      <dependencies>
-          <dependency>
-              <groupId>org.apache.maven.surefire</groupId>
-              <artifactId>surefire-junit47</artifactId>
-              <version>2.18.1</version>
-          </dependency>
-      </dependencies>
       <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>     
-         <forkCount>3</forkCount>
-         <reuseForks>true</reuseForks>
-         <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
-         <testFailureIgnore>true</testFailureIgnore>
-         <threadCount>1</threadCount>
       </configuration>
     </plugin>
   </plugins>
